force-app/main/default/objects/Product__c/fields/Product_description__c.field-meta.xml
<CustomField>
    <fullName>Product_description__c</fullName>
    <description>Description of a product</description>
    <label>Product description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>