force-app/main/default/objects/Product__c/fields/Product_full_name__c.field-meta.xml
<CustomField>
    <fullName>Product_full_name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product full name</label>
    <type>Text</type>
</CustomField>