force-app/main/default/objects/Product__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <description>Product number (ID)</description>
    <displayFormat>PN-{00000}</displayFormat>
    <label>Product ID</label>
    <type>AutoNumber</type>
</CustomField>