force-app/main/default/objects/Product__c/fields/Product_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Link__c</fullName>
    <label>Product Image Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>