force-app/main/default/objects/Product__c/fields/Product_price__c.field-meta.xml
<CustomField>
    <fullName>Product_price__c</fullName>
    <description>Price of a product</description>
    <label>Product price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>