force-app/main/default/objects/Product__c/recordTypes/brand.recordType-meta.xml
<RecordType>
    <fullName>brand</fullName>
    <active>true</active>
    <label>brand</label>
</RecordType>